@@ -38,7 +38,10 @@ jagr {
                             "-Dtestfx.robot=glass",
                             "-Dtestfx.headless=true",
                             "-Dprism.order=sw",
-                            "-Djdk.attach.allowAttachSelf=true"
+                            "-Dprism.lcdtext=false",
+                            "-Dprism.subpixeltext=false",
+                            "-Dglass.win.uiScale=100%",
+                            "-Dprism.text=t2k"
                         )
                     ),
                     transformers = org.sourcegrade.jagr.launcher.env.Transformers(
